# Simple_RAG

./: Dockerfile  Fast_API_test.py  README.md  compose.yaml  pyproject.toml
src/: __main__.py
src/simple_rag/: __main__.py
