[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "SimpleRAG"
dynamic = ["version"]
dependencies = ["llama-index-vector-stores-chroma",
"OpenAI",
"python-multipart",
"llama-index-readers-file",
"llama-index-embeddings-openai"]

requires-python = ">=3.11"
authors = [
  {name = "Frederik Labonte", email = "flabonte@uni-bonn.de"},
]
maintainers = [
  {name = "Frederik Labonte", email = "flabonte@uni-bonn.de"}
]
description = "A simple FastAPI wrapper around Llama-index and OpenAI's API."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = "https://github.com/FMLabonte/Simple_RAG"
Documentation = "https://github.com/FMLabonte/Simple_RAG"
Repository = "https://github.com/FMLabonte/Simple_RAG"

[project.scripts]
simple_rag = "SimpleRAG.__main__:main"

[tool.hatch.version]
source = "vcs"
